--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+gunicorn==22.0.0
 dash==2.16.1
 dash_bootstrap_components==1.6.0
 dash_mantine_components==0.14.0
@@ -6,3 +7,4 @@ numpy==1.22.4
 pandas==1.2.4
 plotly==5.20.0
 seaborn==0.11.1
+
